--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,8 @@ Keras-Preprocessing==1.1.2
 numpy==1.19.0
 opencv-python==4.2.0.34
 tflite==1.14.0
-whitenoise
+sqlparse==0.3.1
+whitenoise==5.0.1
+gunicorn==20.0.4
+joblib==0.14.1
+django-cors-headers==3.2.1
