--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ Django==3.0.8
 Keras==2.4.3
 Keras-Preprocessing==1.1.2
 numpy==1.19.0
-opencv-python==4.2.0.34
+opencv-python-headless
 tflite==1.14.0
 sqlparse==0.3.1
 whitenoise==5.0.1
@@ -13,8 +13,4 @@ gunicorn==20.0.4
 joblib==0.14.1
 django-cors-headers==3.2.1
 tesseract-ocr
-tesseract-ocr-all
-libsm6
-libxrender1
-libfontconfig1
-libice6
+
